--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!--Bagian Halaman Menu Utama (pakai carousel)-->
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleCaptions" class="carousel  slider-home">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,24 +51,36 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="image/bakery1.jpg" class="d-block w-100" alt="Croissant">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Croissant</h5>
-            <p>Try some delightful croissant in Cheesy Cheese Bakery.</p>
+          <div class="background-image">
+            <img src="image/bakery1.jpg" class="d-block w-100" alt="Croissant">
+          </div>
+          <div class="carousel-caption">
+            <div class="caption-content">
+              <h5><strong>Croissant</strong></h5>
+              <p>Try some delightful croissant in Cheesy Cheese Bakery.</p>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="image/bakery2.jpg" class="d-block w-100" alt="Doughnut">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Doughnut</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+          <div class="background-image">
+            <img src="image/bakery2.jpg" class="d-block w-100" alt="Doughnut">
+          </div>
+          <div class="carousel-caption">
+            <div class="caption-content">
+              <h5><strong>Doughnut</strong></h5>
+              <p>Find the best taste of doughnut more in Cheesy Cheese Bakery.</p>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+          <div class="background-image">
+            <img src="image/bakery3.jpg" class="d-block w-100" alt="Cinnamon Rolls">
+          </div>
+          <div class="carousel-caption">
+            <div class="caption-content">
+              <h5><strong>Cinnamon Rolls</strong></h5>
+              <p>Find some sweet and delicious cinnamon rolls in Cheesy Cheese Bakery</p>
+            </div>
           </div>
         </div>
       </div>
@@ -81,5 +93,25 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+    <!--Bagian About Us-->
+    <div class="container">
+      <h2 class="about-us"><strong>About Us</strong></h2>
+      <div class="row">
+        <div class="col-md-8">
+          <div class="title-about-us">
+            <h3>Handmade bread and patisserie</h2>
+          </div>
+          <div class="caption-about-us">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+        <div class="col-6 col-md-4">
+          <img src="image/baking.jpg" class="d-block w-100" alt="Baking">
+        </div>
+      </div>
+    </div>
+
+    <!--Bagian Best Seller-->
 </body>
 </html>
