--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <div class="container">
       <h2 class="about-us"><strong>About Us</strong></h2>
       <div class="row">
-        <div class="col-md-8">
+       <div class="col-md-8">
           <div class="title-about-us">
-            <h3>Handmade bread and patisserie</h2>
+            <h3>Homemade bread and patisserie</h2>
           </div>
           <div class="caption-about-us">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -113,5 +113,33 @@
     </div>
 
     <!--Bagian Best Seller-->
+    <div class="section-service">
+      <div class="container-best-seller">
+        <h2 class="best-seller"><strong>Best Seller</strong></h2>
+        <div class="row">
+          <div class="col-md-4">
+              <div class="service-box">
+                <h1>Service 1</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button type="button" class="btn btn-primary">Read More</button>
+              </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <h1>Service 2</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <button type="button" class="btn btn-primary">Read More</button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <h1>Service 3</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <button type="button" class="btn btn-primary">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
