--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#aboutus">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -96,18 +96,21 @@
 
     <!--Bagian About Us-->
     <div class="container">
-      <h2 class="about-us"><strong>About Us</strong></h2>
-      <div class="row">
-       <div class="col-md-8">
-          <div class="title-about-us">
-            <h3>Homemade bread and patisserie</h2>
+      <div id="aboutus">
+        <h2 class="about-us"><strong>About Us</strong></h2>
+        <div class="row">
+        <div class="col-md-8">
+            <div class="title-about-us">
+              <h3>Homemade bread and patisserie</h2>
+            </div>
+            <div class="caption-about-us">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <button class="submit-button" type="submit">More</button>
+            </div>
           </div>
-          <div class="caption-about-us">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="col-6 col-md-4">
+            <img src="image/baking.jpg" class="d-block w-100" alt="Baking">
           </div>
-        </div>
-        <div class="col-6 col-md-4">
-          <img src="image/baking.jpg" class="d-block w-100" alt="Baking">
         </div>
       </div>
     </div>
@@ -117,28 +120,44 @@
       <div class="container-best-seller">
         <h2 class="best-seller"><strong>Best Seller</strong></h2>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-4">
               <div class="service-box">
-                <h1>Service 1</h1>
+                <i class="bi bi-hearts icon-service"></i>
+                <div class="service-image col-4">
+                  <img src="image/cheesecake.jpg" class="service-image" alt="Cheesecake" />
+                </div>
+                <h1>Cheese Cake</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button type="button" class="btn btn-primary">Read More</button>
               </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-4">
             <div class="service-box">
-              <h1>Service 2</h1>
+              <i class="bi bi-hearts icon-service"></i>
+              <div class="service-image col-4">
+                <img src="image/bruschetta.jpg" class="service-image" alt="Bruschetta" />
+              </div>
+              <h1>Bruschetta</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <button type="button" class="btn btn-primary">Read More</button>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-4">
             <div class="service-box">
-              <h1>Service 3</h1>
+              <i class="bi bi-hearts icon-service"></i>
+              <div class="service-image col-4">
+                <img src="image/cupcakes.jpg" class="service-image" alt="Cupcakes" />
+              </div>
+              <h1>Cupcakes</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <button type="button" class="btn btn-primary">Read More</button>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!--Bagian Kalimat Penutup-->
+    <div class="last-section">
+      <div class="baking-background">
+        <img src="image/final-background.jpg" width="1200vh" height="600vh" alt="Baking Background"/>
       </div>
     </div>
 </body>
