update index about us contact add products

--- a/products.html
+++ b/products.html
@@ -11,8 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="css/style.css" rel="stylesheet" />
-
-    <title>Contact</title>
+    <title>Products</title>
 </head>
 <body>
     <!--Bagian Navbar-->
@@ -31,59 +30,55 @@
                 <a class="nav-link" href="aboutus.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="#">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
-      <!--Bagian Gambar-->
-      <div class="container image">
-        <h2 class="contact-us">Contact Us</h2>
-            <div class="container text-center">
-                <div class="row">
-                <div class="col">
-                    
-                </div>
-                <div class="col-8">
-                    <img src="image/bakery.jpg" width="600px" height="350px" alt="Bakery">
-                </div>
-                <div class="col">
-            
-                </div>
-                </div>
-                </div>
-            </div>
-      </div>
 
-      <!--Bagian Sosial Media-->
-      <div class="container text-center">
-        <div class="row g-2">
-          <div class="col-6">
-            <!--Instagram-->
-            <i class="bi bi-instagram social-media-icons"></i>
-            <div class="p-3">@cheesycheesebakery</div>
-          </div>
-          <div class="col-6">
-            <!--Twitter-->
-            <i class="bi bi-twitter social-media-icons"></i>
-            <div class="p-3">@CheesyCheeseBakery</div>
-          </div>
-          <div class="col-6">
-            <!--Facebook-->
-            <i class="bi bi-facebook social-media-icons"></i>
-            <div class="p-3">Cheesy Cheese Bakery</div>
-          </div>
-          <div class="col-6">
-            <!--YouTube-->
-            <i class="bi bi-youtube social-media-icons"></i>
-            <div class="p-3">Cheesy Cheese Bakery</div>
+    <!--Bagian Product-->
+    <div class="container text-center">
+        <h2 class="our-products">Our Products</h2>
+        <div class="row">
+          <div class="col-sm-12">
+            <img src="image/bagels.jpg" width="700px" height="400px" alt="Bagels">
+            <p><strong>NEW PRODUCT FROM CHEESY CHEESE BAKERY</strong></p>
+            <p>Bagels</p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm">
+            <img src="image/brownies.jpg" width="300px" height="200px" alt="Brownies">
+            <p>Brownies</p>
+          </div>
+          <div class="col-sm">
+            <img src="image/macaron.jpg" width="300px" height="200px" alt="Macaron">
+            <p>Macaron</p>
+          </div>
+          <div class="col-sm">
+            <img src="image/cinamon rolls.jpg" width="300px" height="200px" alt="Cinnamon Rolls">
+            <p>Cinnamon Rolls</p>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+              <img src="image/croissant.jpg" width="300px" height="200px" alt="Croissant">
+              <p>Croissant</p>
+            </div>
+            <div class="col-sm">
+              <img src="image/cupcakes1.jpg" width="300px" height="200px" alt="Cupcakes">
+              <p>Cupcakes</p>
+            </div>
+            <div class="col-sm">
+              <img src="image/doughnut.jpg" width="300px" height="200px" alt="Doughnut">
+              <p>Doughnut</p>
+            </div>
+          </div>
       </div>
 </body>
 </html>
