--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#aboutus">About Us</a>
+              <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
