--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Home</a>
@@ -154,6 +154,10 @@
       </div>
     </div>
 
-  
+    <!--Whatsapp-->
+    <div class="whatsapp-button">
+      <a target="_blank" href="https://api.whatsapp.com/send?phone=081294903772&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."><i class="bi bi-whatsapp"></i></a>
+    </div>
+
 </body>
 </html>
