--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="background-image">
-            <img src="image/bakery1.jpg" class="d-block w-100" alt="Croissant">
+          <div class="background-image" style="background-image: url(image/bakery1.jpg)">
+            <!-- <img src="image/bakery1.jpg" class="d-block w-100" alt="Croissant"> -->
           </div>
           <div class="carousel-caption">
             <div class="caption-content">
@@ -62,8 +62,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="background-image">
-            <img src="image/bakery2.jpg" class="d-block w-100" alt="Doughnut">
+          <div class="background-image" style="background-image: url(image/bakery2.jpg)">
+            <!-- <img src="image/bakery2.jpg" class="d-block w-100" alt="Doughnut"> -->
           </div>
           <div class="carousel-caption">
             <div class="caption-content">
@@ -73,8 +73,8 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="background-image">
-            <img src="image/bakery3.jpg" class="d-block w-100" alt="Cinnamon Rolls">
+          <div class="background-image" style="background-image: url(image/bakery3.jpg);"> 
+            <!-- <img src="image/bakery3.jpg" class="d-block w-100" alt="Cinnamon Rolls"> -->
           </div>
           <div class="carousel-caption">
             <div class="caption-content">
@@ -109,7 +109,9 @@
             </div>
           </div>
           <div class="col-6 col-md-4">
-            <img src="image/baking.jpg" class="d-block w-100" alt="Baking">
+            <div class="image-hover">
+              <img src="image/baking.jpg" class="d-block w-100 rounded-pill" alt="Baking">
+              </div>
           </div>
         </div>
       </div>
@@ -118,39 +120,41 @@
     <!--Bagian Best Seller-->
     <div class="section-service">
       <div class="container-best-seller">
-        <h2 class="best-seller"><strong>Best Seller</strong></h2>
-        <div class="row">
-          <div class="col-4">
+        <div class="container">
+          <h2 class="best-seller"><strong>Best Seller</strong></h2>
+          <div class="row">
+          <div class="col-lg-4">
               <div class="service-box">
                 <i class="bi bi-hearts icon-service"></i>
-                <div class="service-image col-4">
-                  <img src="image/cheesecake.jpg" class="service-image" alt="Cheesecake" />
+                <div class="service-image">
+                  <img src="image/cheesecake.jpg" alt="Cheesecake" />
                 </div>
                 <h1>Cheese Cake</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4">
             <div class="service-box">
               <i class="bi bi-hearts icon-service"></i>
-              <div class="service-image col-4">
-                <img src="image/bruschetta.jpg" class="service-image" alt="Bruschetta" />
+              <div class="service-image">
+                <img src="image/bruschetta.jpg" alt="Bruschetta" />
               </div>
               <h1>Bruschetta</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-lg-4">
             <div class="service-box">
               <i class="bi bi-hearts icon-service"></i>
-              <div class="service-image col-4">
-                <img src="image/cupcakes.jpg" class="service-image" alt="Cupcakes" />
+              <div class="service-image">
+                <img src="image/cupcakes.jpg" alt="Cupcakes" />
               </div>
               <h1>Cupcakes</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
         </div>
+       </div>
       </div>
     </div>
 
