update html css

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <!--Bagian Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Cheesy Cheese Bakery <i class="bi bi-chat-left-heart-fill"></i></a>
+          <a class="navbar-brand" href="index.html">Cheesy Cheese Bakery <i class="bi bi-chat-left-heart-fill"></i></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,7 +42,7 @@
       </nav>
 
       <!--Bagian Gambar-->
-      <div class="container image">
+      <!-- <div class="container image">
         <h2 class="contact-us">Contact Us</h2>
             <div class="container text-center">
                 <div class="row">
@@ -50,7 +50,7 @@
                     
                 </div>
                 <div class="col-8">
-                    <img src="image/bakery.jpg" width="600px" height="350px" alt="Bakery">
+                    <img src="image/bakery.jpg" class="contact-us-image" width="600px" height="350px">
                 </div>
                 <div class="col">
             
@@ -58,27 +58,33 @@
                 </div>
                 </div>
             </div>
+      </div> -->
+      <div class="container contact-image">
+        <h2 class="contact-us">Contact Us</h2>
+        <div class="contact-div">
+          <center><img src="image/bakery.jpg" class="responsive contact-us-image" width="600px" height="350px"></center>
+        </div>
       </div>
 
       <!--Bagian Sosial Media-->
       <div class="container text-center">
-        <div class="row g-2">
-          <div class="col-6">
+        <div class="row g-2 social-media">
+          <div class="col-lg-6 social-media-hover">
             <!--Instagram-->
             <i class="bi bi-instagram social-media-icons"></i>
             <div class="p-3">@cheesycheesebakery</div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 social-media-hover">
             <!--Twitter-->
             <i class="bi bi-twitter social-media-icons"></i>
             <div class="p-3">@CheesyCheeseBakery</div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 social-media-hover">
             <!--Facebook-->
             <i class="bi bi-facebook social-media-icons"></i>
             <div class="p-3">Cheesy Cheese Bakery</div>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 social-media-hover">
             <!--YouTube-->
             <i class="bi bi-youtube social-media-icons"></i>
             <div class="p-3">Cheesy Cheese Bakery</div>
