--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Bagian Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cheesy Cheese Bakery <i class="bi bi-chat-left-heart-fill"></i></a>
+        <a class="navbar-brand" href="index.html">Cheesy Cheese Bakery <i class="bi bi-chat-left-heart-fill"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -108,10 +108,8 @@
               <button class="submit-button" type="submit">More</button>
             </div>
           </div>
-          <div class="col-6 col-md-4">
-            <div class="image-hover">
-              <img src="image/baking.jpg" class="d-block w-100 rounded-pill" alt="Baking">
-              </div>
+          <div class="col-lg-4">
+            <center><img src="image/baking.jpg" class="d-block w-100 rounded-pill baking-index-image" alt="Baking"></center>
           </div>
         </div>
       </div>
@@ -123,31 +121,31 @@
         <div class="container">
           <h2 class="best-seller"><strong>Best Seller</strong></h2>
           <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 best-seller-box">
               <div class="service-box">
                 <i class="bi bi-hearts icon-service"></i>
                 <div class="service-image">
-                  <img src="image/cheesecake.jpg" alt="Cheesecake" />
+                  <img src="image/cheesecake.jpg" class="cheesecake" alt="Cheesecake" />
                 </div>
                 <h1>Cheese Cake</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 best-seller-box">
             <div class="service-box">
               <i class="bi bi-hearts icon-service"></i>
               <div class="service-image">
-                <img src="image/bruschetta.jpg" alt="Bruschetta" />
+                <img src="image/bruschetta.jpg" class="bruschetta" alt="Bruschetta" />
               </div>
               <h1>Bruschetta</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 best-seller-box">
             <div class="service-box">
               <i class="bi bi-hearts icon-service"></i>
               <div class="service-image">
-                <img src="image/cupcakes.jpg" alt="Cupcakes" />
+                <img src="image/cupcakes.jpg" class="cupcakes" alt="Cupcakes" />
               </div>
               <h1>Cupcakes</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
