--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
     <!--Bagian Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Cheesy Cheese Bakery <i class="bi bi-chat-left-heart-fill"></i></a>
+          <a class="navbar-brand" href="index.html">Cheesy Cheese Bakery <i class="bi bi-chat-left-heart-fill"></i></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,10 +44,10 @@
     <!--Bagian Product-->
     <div class="container text-center">
         <h2 class="our-products">Our Products</h2>
-        <div class="row">
-          <div class="col-sm-12">
-            <img src="image/bagels.jpg" width="700px" height="400px" alt="Bagels">
-            <p><strong>NEW PRODUCT FROM CHEESY CHEESE BAKERY</strong></p>
+        <div class="row product-images">
+          <div class="col-sm-12 product-image-bagels">
+            <center><img src="image/bagels.jpg" class="responsive" width="700px" height="400px" alt="Bagels"></center>
+            <p class="bagels-product"><strong>NEW PRODUCT FROM CHEESY CHEESE BAKERY</strong></p>
             <p>Bagels</p>
           </div>
         </div>
